# ImageCropper

./: README.md
Cropper/: CMakeLists.txt  ImageCropperLabel.cpp  ImageCropperLabel.h  MainDlg.cpp  MainDlg.h  main.cpp
